samples/_failures_safe/1760960062_a4c14a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_71cf369c.c: In function ‘main’:
./samples/SAFE/__tmp_71cf369c.c:123:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  123 |     const char* level
      |     ^~~~~
./samples/SAFE/__tmp_71cf369c.c:123:5: error: expected declaration or statement at end of input
